--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -29,9 +29,17 @@
     <%= f.date_field :deadline, class: "form-control" %>
     </p>
   </div>
-  <div class="col-md-3 col-sm-5">
-    <p>
-      <%= f.submit class: "btn btn-success" %>
-    </p>
+  <div class="row">
+    <div class="col-md-9 col-sm-7">
+      <p>
+        <%= f.submit class: "btn btn-success" %>
+      </p>
+    </div>
+    <div class="col-md-3 col-sm-5">
+      <p>
+        <%= link_to "Cancel", :back, class: "btn btn-danger" %>
+      </p>
+    </div>
   </div>
+
 <% end %>
